<resources>
    <string name="app_name">Feature Notes</string>

    <string name="empty_notes">Notes List is empty</string>
    <string name="empty_archive">Archive is empty</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_notes">Notes</string>
    <string name="nav_archive">Archive</string>
    <string name="nav_search">Search</string>
    <string name="nav_filter">Filter</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string name="note_defaults">Note Defaults</string>
    <string name="load_image">Load Image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="note_preferences">note_preferences</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="settings_priority_default">Default Priority</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>
